parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    SEMICOLON

Grammar

Rule 0     S' -> statement
Rule 1     statement -> create_table_statement
Rule 2     statement -> drop_table_statement
Rule 3     statement -> create_index_statement
Rule 4     statement -> drop_index_statement
Rule 5     statement -> select_statement
Rule 6     statement -> insert_statement
Rule 7     statement -> update_statement
Rule 8     statement -> delete_statement
Rule 9     statement -> show_tables_statement
Rule 10    statement -> describe_statement
Rule 11    statement -> copy_statement
Rule 12    show_tables_statement -> SHOW TABLES
Rule 13    describe_statement -> DESCRIBE IDENTIFIER
Rule 14    describe_statement -> DESCRIBE IDENTIFIER DOT IDENTIFIER
Rule 15    copy_statement -> COPY IDENTIFIER FROM STRING_LITERAL
Rule 16    copy_statement -> COPY IDENTIFIER TO STRING_LITERAL
Rule 17    create_table_statement -> CREATE TABLE IDENTIFIER LPAREN column_def_list RPAREN
Rule 18    column_def_list -> column_def
Rule 19    column_def_list -> column_def COMMA column_def_list
Rule 20    column_def -> IDENTIFIER INTEGER primary_key_opt
Rule 21    column_def -> IDENTIFIER STRING primary_key_opt
Rule 22    column_def -> foreign_key_def
Rule 23    primary_key_opt -> PRIMARY KEY
Rule 24    primary_key_opt -> PRIMARY KEY AUTO_INCREMENT
Rule 25    primary_key_opt -> AUTO_INCREMENT
Rule 26    primary_key_opt -> AUTO_INCREMENT PRIMARY KEY
Rule 27    primary_key_opt -> <empty>
Rule 28    foreign_key_def -> FOREIGN KEY LPAREN IDENTIFIER RPAREN REFERENCES IDENTIFIER LPAREN IDENTIFIER RPAREN
Rule 29    drop_table_statement -> DROP TABLE IDENTIFIER
Rule 30    create_index_statement -> CREATE INDEX ON IDENTIFIER LPAREN IDENTIFIER RPAREN
Rule 31    drop_index_statement -> DROP INDEX ON IDENTIFIER LPAREN IDENTIFIER RPAREN
Rule 32    select_statement -> SELECT select_list FROM table_reference join_clauses_opt where_clause_opt group_by_clause_opt order_by_clause_opt having_clause_opt
Rule 33    select_statement -> SELECT select_list FROM table_reference join_clauses_opt where_clause_opt group_by_clause_opt order_by_clause_opt having_clause_opt limit_clause
Rule 34    select_statement -> SELECT select_list FROM table_reference join_clauses_opt where_clause_opt group_by_clause_opt order_by_clause_opt having_clause_opt limit_clause offset_clause
Rule 35    select_list -> ASTERISK
Rule 36    select_list -> column_list
Rule 37    column_list -> column_item
Rule 38    column_list -> column_item COMMA column_list
Rule 39    column_item -> IDENTIFIER
Rule 40    column_item -> IDENTIFIER DOT IDENTIFIER
Rule 41    column_item -> IDENTIFIER AS IDENTIFIER
Rule 42    column_item -> IDENTIFIER DOT IDENTIFIER AS IDENTIFIER
Rule 43    column_item -> aggregation_function
Rule 44    column_item -> aggregation_function AS IDENTIFIER
Rule 45    aggregation_function -> IDENTIFIER LPAREN IDENTIFIER RPAREN
Rule 46    aggregation_function -> IDENTIFIER LPAREN ASTERISK RPAREN
Rule 47    aggregation_function -> COUNT LPAREN ASTERISK RPAREN
Rule 48    aggregation_function -> COUNT LPAREN IDENTIFIER RPAREN
Rule 49    aggregation_function -> AVG LPAREN IDENTIFIER RPAREN
Rule 50    aggregation_function -> SUM LPAREN IDENTIFIER RPAREN
Rule 51    aggregation_function -> MAX LPAREN IDENTIFIER RPAREN
Rule 52    aggregation_function -> MIN LPAREN IDENTIFIER RPAREN
Rule 53    table_reference -> IDENTIFIER
Rule 54    table_reference -> IDENTIFIER IDENTIFIER
Rule 55    table_reference -> IDENTIFIER AS IDENTIFIER
Rule 56    table_reference -> LPAREN select_statement RPAREN AS IDENTIFIER
Rule 57    join_clauses_opt -> join_clause
Rule 58    join_clauses_opt -> join_clause join_clauses_opt
Rule 59    join_clauses_opt -> <empty>
Rule 60    join_clause -> JOIN IDENTIFIER ON join_condition
Rule 61    join_clause -> JOIN IDENTIFIER IDENTIFIER ON join_condition
Rule 62    join_clause -> JOIN IDENTIFIER AS IDENTIFIER ON join_condition
Rule 63    join_condition -> IDENTIFIER DOT IDENTIFIER EQUALS IDENTIFIER DOT IDENTIFIER
Rule 64    where_clause_opt -> WHERE condition
Rule 65    where_clause_opt -> <empty>
Rule 66    group_by_clause_opt -> GROUP BY column_list
Rule 67    group_by_clause_opt -> <empty>
Rule 68    subquery -> SELECT select_list FROM table_reference where_clause_opt
Rule 69    condition -> simple_condition
Rule 70    condition -> condition AND condition
Rule 71    condition -> condition OR condition
Rule 72    condition -> LPAREN condition RPAREN
Rule 73    simple_condition -> comparison
Rule 74    simple_condition -> subquery_condition
Rule 75    subquery_condition -> IDENTIFIER IN LPAREN subquery RPAREN
Rule 76    subquery_condition -> IDENTIFIER DOT IDENTIFIER IN LPAREN subquery RPAREN
Rule 77    comparison -> IDENTIFIER comp_operator expression
Rule 78    comparison -> IDENTIFIER DOT IDENTIFIER comp_operator expression
Rule 79    comp_operator -> EQUALS
Rule 80    comp_operator -> NOTEQUALS
Rule 81    comp_operator -> LT
Rule 82    comp_operator -> GT
Rule 83    comp_operator -> LE
Rule 84    comp_operator -> GE
Rule 85    comp_operator -> LIKE
Rule 86    expression -> IDENTIFIER
Rule 87    expression -> IDENTIFIER DOT IDENTIFIER
Rule 88    expression -> NUMBER
Rule 89    expression -> STRING_LITERAL
Rule 90    order_by_clause_opt -> ORDER BY order_list
Rule 91    order_by_clause_opt -> <empty>
Rule 92    order_list -> order_item
Rule 93    order_list -> order_item COMMA order_list
Rule 94    order_item -> IDENTIFIER
Rule 95    order_item -> IDENTIFIER ASC
Rule 96    order_item -> IDENTIFIER DESC
Rule 97    order_item -> IDENTIFIER DOT IDENTIFIER
Rule 98    order_item -> IDENTIFIER DOT IDENTIFIER ASC
Rule 99    order_item -> IDENTIFIER DOT IDENTIFIER DESC
Rule 100   having_clause_opt -> HAVING condition
Rule 101   having_clause_opt -> <empty>
Rule 102   limit_clause -> LIMIT NUMBER
Rule 103   limit_clause -> LIMIT NUMBER OFFSET NUMBER
Rule 104   offset_clause -> OFFSET NUMBER
Rule 105   insert_statement -> INSERT INTO IDENTIFIER VALUES LPAREN value_list RPAREN
Rule 106   insert_statement -> INSERT INTO IDENTIFIER LPAREN column_list RPAREN VALUES LPAREN value_list RPAREN
Rule 107   value_list -> expression
Rule 108   value_list -> expression COMMA value_list
Rule 109   update_statement -> UPDATE IDENTIFIER SET set_list where_clause_opt
Rule 110   set_list -> set_item
Rule 111   set_list -> set_item COMMA set_list
Rule 112   set_item -> IDENTIFIER EQUALS expression
Rule 113   delete_statement -> DELETE FROM IDENTIFIER where_clause_opt

Terminals, with rules where they appear

AND                  : 70
AS                   : 41 42 44 55 56 62
ASC                  : 95 98
ASTERISK             : 35 46 47
AUTO_INCREMENT       : 24 25 26
AVG                  : 49
BY                   : 66 90
COMMA                : 19 38 93 108 111
COPY                 : 15 16
COUNT                : 47 48
CREATE               : 17 30
DELETE               : 113
DESC                 : 96 99
DESCRIBE             : 13 14
DOT                  : 14 40 42 63 63 76 78 87 97 98 99
DROP                 : 29 31
EQUALS               : 63 79 112
FOREIGN              : 28
FROM                 : 15 32 33 34 68 113
GE                   : 84
GROUP                : 66
GT                   : 82
HAVING               : 100
IDENTIFIER           : 13 14 14 15 16 17 20 21 28 28 28 29 30 30 31 31 39 40 40 41 41 42 42 42 44 45 45 46 48 49 50 51 52 53 54 54 55 55 56 60 61 61 62 62 63 63 63 63 75 76 76 77 78 78 86 87 87 94 95 96 97 97 98 98 99 99 105 106 109 112 113
IN                   : 75 76
INDEX                : 30 31
INSERT               : 105 106
INTEGER              : 20
INTO                 : 105 106
JOIN                 : 60 61 62
KEY                  : 23 24 26 28
LE                   : 83
LIKE                 : 85
LIMIT                : 102 103
LPAREN               : 17 28 28 30 31 45 46 47 48 49 50 51 52 56 72 75 76 105 106 106
LT                   : 81
MAX                  : 51
MIN                  : 52
NOTEQUALS            : 80
NUMBER               : 88 102 103 103 104
OFFSET               : 103 104
ON                   : 30 31 60 61 62
OR                   : 71
ORDER                : 90
PRIMARY              : 23 24 26
REFERENCES           : 28
RPAREN               : 17 28 28 30 31 45 46 47 48 49 50 51 52 56 72 75 76 105 106 106
SELECT               : 32 33 34 68
SEMICOLON            : 
SET                  : 109
SHOW                 : 12
STRING               : 21
STRING_LITERAL       : 15 16 89
SUM                  : 50
TABLE                : 17 29
TABLES               : 12
TO                   : 16
UPDATE               : 109
VALUES               : 105 106
WHERE                : 64
error                : 

Nonterminals, with rules where they appear

aggregation_function : 43 44
column_def           : 18 19
column_def_list      : 17 19
column_item          : 37 38
column_list          : 36 38 66 106
comp_operator        : 77 78
comparison           : 73
condition            : 64 70 70 71 71 72 100
copy_statement       : 11
create_index_statement : 3
create_table_statement : 1
delete_statement     : 8
describe_statement   : 10
drop_index_statement : 4
drop_table_statement : 2
expression           : 77 78 107 108 112
foreign_key_def      : 22
group_by_clause_opt  : 32 33 34
having_clause_opt    : 32 33 34
insert_statement     : 6
join_clause          : 57 58
join_clauses_opt     : 32 33 34 58
join_condition       : 60 61 62
limit_clause         : 33 34
offset_clause        : 34
order_by_clause_opt  : 32 33 34
order_item           : 92 93
order_list           : 90 93
primary_key_opt      : 20 21
select_list          : 32 33 34 68
select_statement     : 5 56
set_item             : 110 111
set_list             : 109 111
show_tables_statement : 9
simple_condition     : 69
statement            : 0
subquery             : 75 76
subquery_condition   : 74
table_reference      : 32 33 34 68
update_statement     : 7
value_list           : 105 106 108
where_clause_opt     : 32 33 34 68 109 113

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . create_table_statement
    (2) statement -> . drop_table_statement
    (3) statement -> . create_index_statement
    (4) statement -> . drop_index_statement
    (5) statement -> . select_statement
    (6) statement -> . insert_statement
    (7) statement -> . update_statement
    (8) statement -> . delete_statement
    (9) statement -> . show_tables_statement
    (10) statement -> . describe_statement
    (11) statement -> . copy_statement
    (17) create_table_statement -> . CREATE TABLE IDENTIFIER LPAREN column_def_list RPAREN
    (29) drop_table_statement -> . DROP TABLE IDENTIFIER
    (30) create_index_statement -> . CREATE INDEX ON IDENTIFIER LPAREN IDENTIFIER RPAREN
    (31) drop_index_statement -> . DROP INDEX ON IDENTIFIER LPAREN IDENTIFIER RPAREN
    (32) select_statement -> . SELECT select_list FROM table_reference join_clauses_opt where_clause_opt group_by_clause_opt order_by_clause_opt having_clause_opt
    (33) select_statement -> . SELECT select_list FROM table_reference join_clauses_opt where_clause_opt group_by_clause_opt order_by_clause_opt having_clause_opt limit_clause
    (34) select_statement -> . SELECT select_list FROM table_reference join_clauses_opt where_clause_opt group_by_clause_opt order_by_clause_opt having_clause_opt limit_clause offset_clause
    (105) insert_statement -> . INSERT INTO IDENTIFIER VALUES LPAREN value_list RPAREN
    (106) insert_statement -> . INSERT INTO IDENTIFIER LPAREN column_list RPAREN VALUES LPAREN value_list RPAREN
    (109) update_statement -> . UPDATE IDENTIFIER SET set_list where_clause_opt
    (113) delete_statement -> . DELETE FROM IDENTIFIER where_clause_opt
    (12) show_tables_statement -> . SHOW TABLES
    (13) describe_statement -> . DESCRIBE IDENTIFIER
    (14) describe_statement -> . DESCRIBE IDENTIFIER DOT IDENTIFIER
    (15) copy_statement -> . COPY IDENTIFIER FROM STRING_LITERAL
    (16) copy_statement -> . COPY IDENTIFIER TO STRING_LITERAL

    CREATE          shift and go to state 13
    DROP            shift and go to state 14
    SELECT          shift and go to state 15
    INSERT          shift and go to state 16
    UPDATE          shift and go to state 17
    DELETE          shift and go to state 18
    SHOW            shift and go to state 19
    DESCRIBE        shift and go to state 20
    COPY            shift and go to state 21

    statement                      shift and go to state 1
    create_table_statement         shift and go to state 2
    drop_table_statement           shift and go to state 3
    create_index_statement         shift and go to state 4
    drop_index_statement           shift and go to state 5
    select_statement               shift and go to state 6
    insert_statement               shift and go to state 7
    update_statement               shift and go to state 8
    delete_statement               shift and go to state 9
    show_tables_statement          shift and go to state 10
    describe_statement             shift and go to state 11
    copy_statement                 shift and go to state 12

state 1

    (0) S' -> statement .



state 2

    (1) statement -> create_table_statement .

    $end            reduce using rule 1 (statement -> create_table_statement .)


state 3

    (2) statement -> drop_table_statement .

    $end            reduce using rule 2 (statement -> drop_table_statement .)


state 4

    (3) statement -> create_index_statement .

    $end            reduce using rule 3 (statement -> create_index_statement .)


state 5

    (4) statement -> drop_index_statement .

    $end            reduce using rule 4 (statement -> drop_index_statement .)


state 6

    (5) statement -> select_statement .

    $end            reduce using rule 5 (statement -> select_statement .)


state 7

    (6) statement -> insert_statement .

    $end            reduce using rule 6 (statement -> insert_statement .)


state 8

    (7) statement -> update_statement .

    $end            reduce using rule 7 (statement -> update_statement .)


state 9

    (8) statement -> delete_statement .

    $end            reduce using rule 8 (statement -> delete_statement .)


state 10

    (9) statement -> show_tables_statement .

    $end            reduce using rule 9 (statement -> show_tables_statement .)


state 11

    (10) statement -> describe_statement .

    $end            reduce using rule 10 (statement -> describe_statement .)


state 12

    (11) statement -> copy_statement .

    $end            reduce using rule 11 (statement -> copy_statement .)


state 13

    (17) create_table_statement -> CREATE . TABLE IDENTIFIER LPAREN column_def_list RPAREN
    (30) create_index_statement -> CREATE . INDEX ON IDENTIFIER LPAREN IDENTIFIER RPAREN

    TABLE           shift and go to state 22
    INDEX           shift and go to state 23


state 14

    (29) drop_table_statement -> DROP . TABLE IDENTIFIER
    (31) drop_index_statement -> DROP . INDEX ON IDENTIFIER LPAREN IDENTIFIER RPAREN

    TABLE           shift and go to state 24
    INDEX           shift and go to state 25


state 15

    (32) select_statement -> SELECT . select_list FROM table_reference join_clauses_opt where_clause_opt group_by_clause_opt order_by_clause_opt having_clause_opt
    (33) select_statement -> SELECT . select_list FROM table_reference join_clauses_opt where_clause_opt group_by_clause_opt order_by_clause_opt having_clause_opt limit_clause
    (34) select_statement -> SELECT . select_list FROM table_reference join_clauses_opt where_clause_opt group_by_clause_opt order_by_clause_opt having_clause_opt limit_clause offset_clause
    (35) select_list -> . ASTERISK
    (36) select_list -> . column_list
    (37) column_list -> . column_item
    (38) column_list -> . column_item COMMA column_list
    (39) column_item -> . IDENTIFIER
    (40) column_item -> . IDENTIFIER DOT IDENTIFIER
    (41) column_item -> . IDENTIFIER AS IDENTIFIER
    (42) column_item -> . IDENTIFIER DOT IDENTIFIER AS IDENTIFIER
    (43) column_item -> . aggregation_function
    (44) column_item -> . aggregation_function AS IDENTIFIER
    (45) aggregation_function -> . IDENTIFIER LPAREN IDENTIFIER RPAREN
    (46) aggregation_function -> . IDENTIFIER LPAREN ASTERISK RPAREN
    (47) aggregation_function -> . COUNT LPAREN ASTERISK RPAREN
    (48) aggregation_function -> . COUNT LPAREN IDENTIFIER RPAREN
    (49) aggregation_function -> . AVG LPAREN IDENTIFIER RPAREN
    (50) aggregation_function -> . SUM LPAREN IDENTIFIER RPAREN
    (51) aggregation_function -> . MAX LPAREN IDENTIFIER RPAREN
    (52) aggregation_function -> . MIN LPAREN IDENTIFIER RPAREN

    ASTERISK        shift and go to state 27
    IDENTIFIER      shift and go to state 30
    COUNT           shift and go to state 32
    AVG             shift and go to state 33
    SUM             shift and go to state 34
    MAX             shift and go to state 35
    MIN             shift and go to state 36

    select_list                    shift and go to state 26
    column_list                    shift and go to state 28
    column_item                    shift and go to state 29
    aggregation_function           shift and go to state 31

state 16

    (105) insert_statement -> INSERT . INTO IDENTIFIER VALUES LPAREN value_list RPAREN
    (106) insert_statement -> INSERT . INTO IDENTIFIER LPAREN column_list RPAREN VALUES LPAREN value_list RPAREN

    INTO            shift and go to state 37


state 17

    (109) update_statement -> UPDATE . IDENTIFIER SET set_list where_clause_opt

    IDENTIFIER      shift and go to state 38


state 18

    (113) delete_statement -> DELETE . FROM IDENTIFIER where_clause_opt

    FROM            shift and go to state 39


state 19

    (12) show_tables_statement -> SHOW . TABLES

    TABLES          shift and go to state 40


state 20

    (13) describe_statement -> DESCRIBE . IDENTIFIER
    (14) describe_statement -> DESCRIBE . IDENTIFIER DOT IDENTIFIER

    IDENTIFIER      shift and go to state 41


state 21

    (15) copy_statement -> COPY . IDENTIFIER FROM STRING_LITERAL
    (16) copy_statement -> COPY . IDENTIFIER TO STRING_LITERAL

    IDENTIFIER      shift and go to state 42


state 22

    (17) create_table_statement -> CREATE TABLE . IDENTIFIER LPAREN column_def_list RPAREN

    IDENTIFIER      shift and go to state 43


state 23

    (30) create_index_statement -> CREATE INDEX . ON IDENTIFIER LPAREN IDENTIFIER RPAREN

    ON              shift and go to state 44


state 24

    (29) drop_table_statement -> DROP TABLE . IDENTIFIER

    IDENTIFIER      shift and go to state 45


state 25

    (31) drop_index_statement -> DROP INDEX . ON IDENTIFIER LPAREN IDENTIFIER RPAREN

    ON              shift and go to state 46


state 26

    (32) select_statement -> SELECT select_list . FROM table_reference join_clauses_opt where_clause_opt group_by_clause_opt order_by_clause_opt having_clause_opt
    (33) select_statement -> SELECT select_list . FROM table_reference join_clauses_opt where_clause_opt group_by_clause_opt order_by_clause_opt having_clause_opt limit_clause
    (34) select_statement -> SELECT select_list . FROM table_reference join_clauses_opt where_clause_opt group_by_clause_opt order_by_clause_opt having_clause_opt limit_clause offset_clause

    FROM            shift and go to state 47


state 27

    (35) select_list -> ASTERISK .

    FROM            reduce using rule 35 (select_list -> ASTERISK .)


state 28

    (36) select_list -> column_list .

    FROM            reduce using rule 36 (select_list -> column_list .)


state 29

    (37) column_list -> column_item .
    (38) column_list -> column_item . COMMA column_list

    FROM            reduce using rule 37 (column_list -> column_item .)
    RPAREN          reduce using rule 37 (column_list -> column_item .)
    ORDER           reduce using rule 37 (column_list -> column_item .)
    HAVING          reduce using rule 37 (column_list -> column_item .)
    LIMIT           reduce using rule 37 (column_list -> column_item .)
    $end            reduce using rule 37 (column_list -> column_item .)
    COMMA           shift and go to state 48


state 30

    (39) column_item -> IDENTIFIER .
    (40) column_item -> IDENTIFIER . DOT IDENTIFIER
    (41) column_item -> IDENTIFIER . AS IDENTIFIER
    (42) column_item -> IDENTIFIER . DOT IDENTIFIER AS IDENTIFIER
    (45) aggregation_function -> IDENTIFIER . LPAREN IDENTIFIER RPAREN
    (46) aggregation_function -> IDENTIFIER . LPAREN ASTERISK RPAREN

    COMMA           reduce using rule 39 (column_item -> IDENTIFIER .)
    FROM            reduce using rule 39 (column_item -> IDENTIFIER .)
    RPAREN          reduce using rule 39 (column_item -> IDENTIFIER .)
    ORDER           reduce using rule 39 (column_item -> IDENTIFIER .)
    HAVING          reduce using rule 39 (column_item -> IDENTIFIER .)
    LIMIT           reduce using rule 39 (column_item -> IDENTIFIER .)
    $end            reduce using rule 39 (column_item -> IDENTIFIER .)
    DOT             shift and go to state 49
    AS              shift and go to state 50
    LPAREN          shift and go to state 51


state 31

    (43) column_item -> aggregation_function .
    (44) column_item -> aggregation_function . AS IDENTIFIER

    COMMA           reduce using rule 43 (column_item -> aggregation_function .)
    FROM            reduce using rule 43 (column_item -> aggregation_function .)
    RPAREN          reduce using rule 43 (column_item -> aggregation_function .)
    ORDER           reduce using rule 43 (column_item -> aggregation_function .)
    HAVING          reduce using rule 43 (column_item -> aggregation_function .)
    LIMIT           reduce using rule 43 (column_item -> aggregation_function .)
    $end            reduce using rule 43 (column_item -> aggregation_function .)
    AS              shift and go to state 52


state 32

    (47) aggregation_function -> COUNT . LPAREN ASTERISK RPAREN
    (48) aggregation_function -> COUNT . LPAREN IDENTIFIER RPAREN

    LPAREN          shift and go to state 53


state 33

    (49) aggregation_function -> AVG . LPAREN IDENTIFIER RPAREN

    LPAREN          shift and go to state 54


state 34

    (50) aggregation_function -> SUM . LPAREN IDENTIFIER RPAREN

    LPAREN          shift and go to state 55


state 35

    (51) aggregation_function -> MAX . LPAREN IDENTIFIER RPAREN

    LPAREN          shift and go to state 56


state 36

    (52) aggregation_function -> MIN . LPAREN IDENTIFIER RPAREN

    LPAREN          shift and go to state 57


state 37

    (105) insert_statement -> INSERT INTO . IDENTIFIER VALUES LPAREN value_list RPAREN
    (106) insert_statement -> INSERT INTO . IDENTIFIER LPAREN column_list RPAREN VALUES LPAREN value_list RPAREN

    IDENTIFIER      shift and go to state 58


state 38

    (109) update_statement -> UPDATE IDENTIFIER . SET set_list where_clause_opt

    SET             shift and go to state 59


state 39

    (113) delete_statement -> DELETE FROM . IDENTIFIER where_clause_opt

    IDENTIFIER      shift and go to state 60


state 40

    (12) show_tables_statement -> SHOW TABLES .

    $end            reduce using rule 12 (show_tables_statement -> SHOW TABLES .)


state 41

    (13) describe_statement -> DESCRIBE IDENTIFIER .
    (14) describe_statement -> DESCRIBE IDENTIFIER . DOT IDENTIFIER

    $end            reduce using rule 13 (describe_statement -> DESCRIBE IDENTIFIER .)
    DOT             shift and go to state 61


state 42

    (15) copy_statement -> COPY IDENTIFIER . FROM STRING_LITERAL
    (16) copy_statement -> COPY IDENTIFIER . TO STRING_LITERAL

    FROM            shift and go to state 62
    TO              shift and go to state 63


state 43

    (17) create_table_statement -> CREATE TABLE IDENTIFIER . LPAREN column_def_list RPAREN

    LPAREN          shift and go to state 64


state 44

    (30) create_index_statement -> CREATE INDEX ON . IDENTIFIER LPAREN IDENTIFIER RPAREN

    IDENTIFIER      shift and go to state 65


state 45

    (29) drop_table_statement -> DROP TABLE IDENTIFIER .

    $end            reduce using rule 29 (drop_table_statement -> DROP TABLE IDENTIFIER .)


state 46

    (31) drop_index_statement -> DROP INDEX ON . IDENTIFIER LPAREN IDENTIFIER RPAREN

    IDENTIFIER      shift and go to state 66


state 47

    (32) select_statement -> SELECT select_list FROM . table_reference join_clauses_opt where_clause_opt group_by_clause_opt order_by_clause_opt having_clause_opt
    (33) select_statement -> SELECT select_list FROM . table_reference join_clauses_opt where_clause_opt group_by_clause_opt order_by_clause_opt having_clause_opt limit_clause
    (34) select_statement -> SELECT select_list FROM . table_reference join_clauses_opt where_clause_opt group_by_clause_opt order_by_clause_opt having_clause_opt limit_clause offset_clause
    (53) table_reference -> . IDENTIFIER
    (54) table_reference -> . IDENTIFIER IDENTIFIER
    (55) table_reference -> . IDENTIFIER AS IDENTIFIER
    (56) table_reference -> . LPAREN select_statement RPAREN AS IDENTIFIER

    IDENTIFIER      shift and go to state 68
    LPAREN          shift and go to state 69

    table_reference                shift and go to state 67

state 48

    (38) column_list -> column_item COMMA . column_list
    (37) column_list -> . column_item
    (38) column_list -> . column_item COMMA column_list
    (39) column_item -> . IDENTIFIER
    (40) column_item -> . IDENTIFIER DOT IDENTIFIER
    (41) column_item -> . IDENTIFIER AS IDENTIFIER
    (42) column_item -> . IDENTIFIER DOT IDENTIFIER AS IDENTIFIER
    (43) column_item -> . aggregation_function
    (44) column_item -> . aggregation_function AS IDENTIFIER
    (45) aggregation_function -> . IDENTIFIER LPAREN IDENTIFIER RPAREN
    (46) aggregation_function -> . IDENTIFIER LPAREN ASTERISK RPAREN
    (47) aggregation_function -> . COUNT LPAREN ASTERISK RPAREN
    (48) aggregation_function -> . COUNT LPAREN IDENTIFIER RPAREN
    (49) aggregation_function -> . AVG LPAREN IDENTIFIER RPAREN
    (50) aggregation_function -> . SUM LPAREN IDENTIFIER RPAREN
    (51) aggregation_function -> . MAX LPAREN IDENTIFIER RPAREN
    (52) aggregation_function -> . MIN LPAREN IDENTIFIER RPAREN

    IDENTIFIER      shift and go to state 30
    COUNT           shift and go to state 32
    AVG             shift and go to state 33
    SUM             shift and go to state 34
    MAX             shift and go to state 35
    MIN             shift and go to state 36

    column_item                    shift and go to state 29
    column_list                    shift and go to state 70
    aggregation_function           shift and go to state 31

state 49

    (40) column_item -> IDENTIFIER DOT . IDENTIFIER
    (42) column_item -> IDENTIFIER DOT . IDENTIFIER AS IDENTIFIER

    IDENTIFIER      shift and go to state 71


state 50

    (41) column_item -> IDENTIFIER AS . IDENTIFIER

    IDENTIFIER      shift and go to state 72


state 51

    (45) aggregation_function -> IDENTIFIER LPAREN . IDENTIFIER RPAREN
    (46) aggregation_function -> IDENTIFIER LPAREN . ASTERISK RPAREN

    IDENTIFIER      shift and go to state 73
    ASTERISK        shift and go to state 74


state 52

    (44) column_item -> aggregation_function AS . IDENTIFIER

    IDENTIFIER      shift and go to state 75


state 53

    (47) aggregation_function -> COUNT LPAREN . ASTERISK RPAREN
    (48) aggregation_function -> COUNT LPAREN . IDENTIFIER RPAREN

    ASTERISK        shift and go to state 76
    IDENTIFIER      shift and go to state 77


state 54

    (49) aggregation_function -> AVG LPAREN . IDENTIFIER RPAREN

    IDENTIFIER      shift and go to state 78


state 55

    (50) aggregation_function -> SUM LPAREN . IDENTIFIER RPAREN

    IDENTIFIER      shift and go to state 79


state 56

    (51) aggregation_function -> MAX LPAREN . IDENTIFIER RPAREN

    IDENTIFIER      shift and go to state 80


state 57

    (52) aggregation_function -> MIN LPAREN . IDENTIFIER RPAREN

    IDENTIFIER      shift and go to state 81


state 58

    (105) insert_statement -> INSERT INTO IDENTIFIER . VALUES LPAREN value_list RPAREN
    (106) insert_statement -> INSERT INTO IDENTIFIER . LPAREN column_list RPAREN VALUES LPAREN value_list RPAREN

    VALUES          shift and go to state 82
    LPAREN          shift and go to state 83


state 59

    (109) update_statement -> UPDATE IDENTIFIER SET . set_list where_clause_opt
    (110) set_list -> . set_item
    (111) set_list -> . set_item COMMA set_list
    (112) set_item -> . IDENTIFIER EQUALS expression

    IDENTIFIER      shift and go to state 84

    set_list                       shift and go to state 85
    set_item                       shift and go to state 86

state 60

    (113) delete_statement -> DELETE FROM IDENTIFIER . where_clause_opt
    (64) where_clause_opt -> . WHERE condition
    (65) where_clause_opt -> .

    WHERE           shift and go to state 88
    $end            reduce using rule 65 (where_clause_opt -> .)

    where_clause_opt               shift and go to state 87

state 61

    (14) describe_statement -> DESCRIBE IDENTIFIER DOT . IDENTIFIER

    IDENTIFIER      shift and go to state 89


state 62

    (15) copy_statement -> COPY IDENTIFIER FROM . STRING_LITERAL

    STRING_LITERAL  shift and go to state 90


state 63

    (16) copy_statement -> COPY IDENTIFIER TO . STRING_LITERAL

    STRING_LITERAL  shift and go to state 91


state 64

    (17) create_table_statement -> CREATE TABLE IDENTIFIER LPAREN . column_def_list RPAREN
    (18) column_def_list -> . column_def
    (19) column_def_list -> . column_def COMMA column_def_list
    (20) column_def -> . IDENTIFIER INTEGER primary_key_opt
    (21) column_def -> . IDENTIFIER STRING primary_key_opt
    (22) column_def -> . foreign_key_def
    (28) foreign_key_def -> . FOREIGN KEY LPAREN IDENTIFIER RPAREN REFERENCES IDENTIFIER LPAREN IDENTIFIER RPAREN

    IDENTIFIER      shift and go to state 92
    FOREIGN         shift and go to state 96

    column_def_list                shift and go to state 93
    column_def                     shift and go to state 94
    foreign_key_def                shift and go to state 95

state 65

    (30) create_index_statement -> CREATE INDEX ON IDENTIFIER . LPAREN IDENTIFIER RPAREN

    LPAREN          shift and go to state 97


state 66

    (31) drop_index_statement -> DROP INDEX ON IDENTIFIER . LPAREN IDENTIFIER RPAREN

    LPAREN          shift and go to state 98


state 67

    (32) select_statement -> SELECT select_list FROM table_reference . join_clauses_opt where_clause_opt group_by_clause_opt order_by_clause_opt having_clause_opt
    (33) select_statement -> SELECT select_list FROM table_reference . join_clauses_opt where_clause_opt group_by_clause_opt order_by_clause_opt having_clause_opt limit_clause
    (34) select_statement -> SELECT select_list FROM table_reference . join_clauses_opt where_clause_opt group_by_clause_opt order_by_clause_opt having_clause_opt limit_clause offset_clause
    (57) join_clauses_opt -> . join_clause
    (58) join_clauses_opt -> . join_clause join_clauses_opt
    (59) join_clauses_opt -> .
    (60) join_clause -> . JOIN IDENTIFIER ON join_condition
    (61) join_clause -> . JOIN IDENTIFIER IDENTIFIER ON join_condition
    (62) join_clause -> . JOIN IDENTIFIER AS IDENTIFIER ON join_condition

    WHERE           reduce using rule 59 (join_clauses_opt -> .)
    GROUP           reduce using rule 59 (join_clauses_opt -> .)
    ORDER           reduce using rule 59 (join_clauses_opt -> .)
    HAVING          reduce using rule 59 (join_clauses_opt -> .)
    LIMIT           reduce using rule 59 (join_clauses_opt -> .)
    $end            reduce using rule 59 (join_clauses_opt -> .)
    RPAREN          reduce using rule 59 (join_clauses_opt -> .)
    JOIN            shift and go to state 101

    join_clauses_opt               shift and go to state 99
    join_clause                    shift and go to state 100

state 68

    (53) table_reference -> IDENTIFIER .
    (54) table_reference -> IDENTIFIER . IDENTIFIER
    (55) table_reference -> IDENTIFIER . AS IDENTIFIER

    JOIN            reduce using rule 53 (table_reference -> IDENTIFIER .)
    WHERE           reduce using rule 53 (table_reference -> IDENTIFIER .)
    GROUP           reduce using rule 53 (table_reference -> IDENTIFIER .)
    ORDER           reduce using rule 53 (table_reference -> IDENTIFIER .)
    HAVING          reduce using rule 53 (table_reference -> IDENTIFIER .)
    LIMIT           reduce using rule 53 (table_reference -> IDENTIFIER .)
    $end            reduce using rule 53 (table_reference -> IDENTIFIER .)
    RPAREN          reduce using rule 53 (table_reference -> IDENTIFIER .)
    IDENTIFIER      shift and go to state 102
    AS              shift and go to state 103


state 69
